--- a/index.html
+++ b/index.html
@@ -5,11 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+
+    <header class="header">
+
+        <div class="container_max-width">
+
+            <div class="logo">
+                <a class="logo__text" href="index.html">Mestieri</a>
+            </div>
+
+            <nav class="nav">
+                <ul class="nav__sections">
+                    <li class="nav__items"><a class="nav__link" href="#">Inicio</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#">Productos</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#">Contacto</a></li>
+                </ul>
+            </nav>
+
+            <div class="shopping-card">
+                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48">
+                    <path
+                        d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h491v60H277q-42 0-60.5-28t.5-63l64-118-152-322H51v-60h117l37 79Zm140 288h288-288Z" />
+                </svg>
+            </div>
+
+            <div class="log-in log-in--hidden">
+                <span>Iniciar Sesión</span>
+            </div>
+            <div class="sign-up log-up--hidden">
+                <span>Registrarse</span>
+            </div>
+
+            <div class="menu-btn">
+                <svg class="icons menu_bars" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
+                    width="48">
+                    <path d="M120-240v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z" />
+                </svg>
+                <svg class="icons menu_close menu_close--hidden" xmlns="http://www.w3.org/2000/svg" height="48"
+                    viewBox="0 -960 960 960" width="48">
+                    <path
+                        d="m249-207-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z" />
+                </svg>
+            </div>
+
+        </div>
+    </header>
+    <main class="main">
+
+    </main>
+
 
     <script type="module" src="js/script.js"></script>
 </body>
