Se añade el home movil

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <nav class="nav">
                 <ul class="nav__sections">
-                    <li class="nav__items"><a class="nav__link" href="#">Inicio</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Productos</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
@@ -58,6 +58,19 @@
         </div>
     </header>
     <main class="main">
+
+        <section id="inicio" class="home hero-image" data-opacity-color="var(--black-alpha-color)"
+            data-url="url('assets/images/background-image.jpg')" data-attachment="fixed">
+
+            <div class="home__text">
+                <span class="text_yellow">¿Y TU, ESTAS DISPUESTO</span> <br> <span class="text_white_tr">
+                    A PROBARNOS?
+                </span>
+            </div>
+
+            <a class="home__btn link-to_btn" href="#">Ordena Ahora</a>
+
+        </section>
 
     </main>
 
