Se añade la section de los productos mas populares vers. movil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="nav__sections">
                     <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#">Productos</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#productos">Productos</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Contacto</a></li>
                 </ul>
@@ -69,6 +69,68 @@
             </div>
 
             <a class="home__btn link-to_btn" href="#">Ordena Ahora</a>
+
+        </section>
+
+        <section id="productos" class="products section_padding">
+
+            <div class="container_max-width">
+                <h2 class="section__title">Mas popular</h2>
+
+                <div class="cards">
+
+                    <div class="card">
+                        <figure class="card__header">
+                            <img class="card__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
+                                alt="Hamburguesa Fundadora">
+                        </figure>
+
+                        <div class="card__body">
+                            <h3 class="card__title">Hamburguesa La Fundadora</h3>
+                            <h4 class="card__price">COP $15.000</h4>
+                            <button class="card__btn">
+                                Añadir al carrito
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <figure class="card__header">
+                            <img class="card__img" src="assets/images/products/hot-dog-fundador.jpg"
+                                alt="Hamburguesa Fundadora">
+                        </figure>
+
+                        <div class="card__body">
+                            <h3 class="card__title">Hot Dog Fundador</h3>
+                            <h4 class="card__price">COP $13.000</h4>
+                            <button class="card__btn">
+                                Añadir al carrito
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <figure class="card__header">
+                            <img class="card__img" src="assets/images/products/hamburguesa-doble-cheese-&-bacon.jpg"
+                                alt="Hamburguesa Fundadora">
+                        </figure>
+
+                        <div class="card__body">
+                            <h3 class="card__title">Hamburguesa Doble Cheese And Bacon</h3>
+                            <h4 class="card__price">COP $18.000</h4>
+                            <button class="card__btn">
+                                Añadir al carrito
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="acerca" class="about">
 
         </section>
 
