Se añade a la section de productos el slider de otros productos vers. movil

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <nav class="nav">
                 <ul class="nav__sections">
                     <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
                     <li class="nav__items"><a class="nav__link" href="#productos">Productos</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Contacto</a></li>
                 </ul>
@@ -74,7 +74,7 @@
 
         <section id="productos" class="products section_padding">
 
-            <div class="container_max-width">
+            <article class="container_max-width">
                 <h2 class="section__title">Mas popular</h2>
 
                 <div class="cards">
@@ -126,8 +126,51 @@
 
                 </div>
 
-            </div>
+            </article>
 
+            <article class="container_max-width">
+                <h2 class="section__title">Otros Productos</h2>
+                <div class="slider">
+                    <div class="slider__slide">
+                        <img class="slider__img" src="/assets/images/products/hamburguesa-de-pollo.jpg" alt="">
+                        <div class="slider__hover">
+                            <h3 class="slider__title">Hamburguesa de Pollo</h3>
+                            <a class="slider__btn link-to_btn" href="#">Ordena Ahora</a>
+                        </div>
+                    </div>
+                    <div class="slider__slide">
+                        <img class="slider__img" src="/assets/images/products/hamburguesa-mixta.jpg" alt="">
+                        <div class="slider__hover">
+                            <h3 class="slider__title">Hamburguesa Mixta</h3>
+                            <a class="slider__btn link-to_btn" href="#">Ordena Ahora</a>
+                        </div>
+                    </div>
+                    <div class="slider__slide">
+                        <img class="slider__img" src="/assets/images/products/sandwich-pollo.jpg" alt="">
+                        <div class="slider__hover">
+                            <h3 class="slider__title">Sandwich de Pollo</h3>
+                            <a class="slider__btn link-to_btn" href="#">Ordena Ahora</a>
+                        </div>
+                    </div>
+                    <div class="slider__slide">
+                        <img class="slider__img" src="/assets/images/products/salchipapa-basica-principal.jpg" alt="">
+                        <div class="slider__hover">
+                            <h3 class="slider__title">Salchipapa Básica Principal</h3>
+                            <a class="slider__btn link-to_btn" href="#">Ordena Ahora</a>
+                        </div>
+                    </div>
+                    <div class="slider__slide">
+                        <img class="slider__img" src="/assets/images/products/papas-cheedar.jpg" alt="">
+                        <div class="slider__hover">
+                            <h3 class="slider__title">Papas Cheedar</h3>
+                            <a class="slider__btn link-to_btn" href="#">Ordena Ahora</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <br>
+            <br>
         </section>
 
         <section id="acerca" class="about">
