Se añade la section acerca vers. movil

--- a/index.html
+++ b/index.html
@@ -169,11 +169,35 @@
                 </div>
             </article>
 
-            <br>
-            <br>
         </section>
 
-        <section id="acerca" class="about">
+        <section id="acerca" class="about section_padding hero-image" data-opacity-color="var(--white-alpha-color)"
+            data-url="url('assets/images/acerca.jpg')" data-attachment="scroll">
+            <article class="about__container container_max-width">
+                <h2 class="section__title">Acerca de <span class="about__span">Mestieri</span></h2>
+
+                <p class="about__paragraph">
+                    En Mestieri, nos apasiona ofrecer una experiencia culinaria única y deliciosa. Desde nuestros
+                    humildes inicios como un pequeño puesto de comida, nos hemos convertido en un destino reconocido
+                    para
+                    aquellos que buscan disfrutar de platos rápidos y sabrosos.
+                </p>
+                <p class="about__paragraph">
+                    Nuestro enfoque se basa en la combinación perfecta de calidad y rapidez, utilizando ingredientes
+                    frescos y de alta calidad para preparar comidas llenas de sabor.
+                </p>
+                <p class="about__paragraph">
+                    Cada plato es elaborado cuidadosamente por nuestro talentoso equipo, que trabaja para mantener los
+                    estándares más altos en cada preparación. En Mestieri Fast Food, estamos comprometidos con tu
+                    satisfacción y esperamos verte pronto en nuestro restaurante.
+                </p>
+                <p class="about__paragraph">
+                    ¡Gracias por ser parte de nuestra historia y apoyarnos en nuestro viaje gastronómico!
+                </p>
+                <figure class="about__figure">
+                    <img class="about_img" src="assets/images/acerca.jpg" alt="">
+                </figure>
+            </article>
 
         </section>
 
