--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <ul class="nav__sections">
                     <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
                     <li class="nav__items"><a class="nav__link" href="#productos">Productos</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#">Acerca</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#acerca">Acerca</a></li>
+                    <li class="nav__items"><a class="nav__link" href="#contacto">Contacto</a></li>
                     <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#">Contacto</a></li>
                 </ul>
             </nav>
 
@@ -74,8 +74,8 @@
 
         <section id="productos" class="products section_padding">
 
-            <article class="container_max-width">
-                <h2 class="section__title">Mas popular</h2>
+            <article class="products__popular container_max-width">
+                <h2 class="section__title">Mas populares</h2>
 
                 <div class="cards">
 
@@ -128,7 +128,7 @@
 
             </article>
 
-            <article class="container_max-width">
+            <article class="products__others container_max-width">
                 <h2 class="section__title">Otros Productos</h2>
                 <div class="slider">
                     <div class="slider__slide">
@@ -201,9 +201,71 @@
 
         </section>
 
+        <section id="contacto" class="contact section_padding">
+
+            <article class="container_max-width">
+                <h2 class="section__title">Información de Contacto</h2>
+                <ul class="contact__info">
+                    <li class="contact__items">
+                        <svg class="contact__icons icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="M480.089-490Q509-490 529.5-510.589q20.5-20.588 20.5-49.5Q550-589 529.411-609.5q-20.588-20.5-49.5-20.5Q451-630 430.5-609.411q-20.5 20.588-20.5 49.5Q410-531 430.589-510.5q20.588 20.5 49.5 20.5ZM480-80Q319-217 239.5-334.5T160-552q0-150 96.5-239T480-880q127 0 223.5 89T800-552q0 100-79.5 217.5T480-80Z" />
+                        </svg>
+                        <h3 class="contact__subtitle section__title">Dirección</h3>
+                        <span class="contact__text">Calle 3 #7e-54 Quinta Oriental, Cúcuta, Colombia</span>
+                    </li>
+                    <li class="contact__items">
+                        <svg class="contact__icons icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="M795-120q-116 0-236.5-56T335-335Q232-438 176-558.5T120-795q0-19 13-32t32-13h140q14 0 24 10t14 25l27 126q2 14-.5 25.5T359-634L259-533q26 44 55 82t64 72q37 38 78 69.5t86 55.5l95-98q10-11 23-15t26-2l119 26q15 4 25 16t10 27v135q0 19-13 32t-32 13Z" />
+                        </svg>
+                        <h3 class="contact__subtitle section__title">Teléfono</h3>
+                        320 8757467
+                    </li>
+                    <li class="contact__items">
+                        <svg class="contact__icons icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="M140-160q-24 0-42-18t-18-42v-520q0-24 18-42t42-18h680q24 0 42 18t18 42v520q0 24-18 42t-42 18H140Zm340-302L140-685v465h680v-465L480-462Zm0-60 336-218H145l335 218ZM140-685v-55 520-465Z" />
+                        </svg>
+                        <h3 class="contact__subtitle section__title">Correo</h3>
+                        mestierifastfood@gmail.com
+                    </li>
+                    <li class="contact__items">
+                        <svg class="contact__icons icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="m239-160 40-159H120l15-60h159l51-202H186l15-60h159l39-159h59l-39 159h203l39-159h59l-39 159h159l-15 60H666l-51 202h159l-15 60H600l-40 159h-59l40-159H338l-40 159h-59Zm114-219h203l51-202H404l-51 202Z" />
+                        </svg>
+                        <h3 class="contact__subtitle section__title">Social Media</h3>
+                        <div class="contact__social-media">
+                            <img src="assets/icons/facebook.svg" alt="">
+                            <img src="assets/icons/instagram.svg" alt="">
+                            <img src="assets/icons/whatsapp.svg" alt="">
+                        </div>
+                    </li>
+                    <li class="contact__items">
+                        <svg class="contact__icons icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="m627-287 45-45-159-160v-201h-60v225l174 181ZM480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-82 31.5-155t86-127.5Q252-817 325-848.5T480-880q82 0 155 31.5t127.5 86Q817-708 848.5-635T880-480q0 82-31.5 155t-86 127.5Q708-143 635-111.5T480-80Z" />
+                        </svg>
+                        <h3 class="contact__subtitle section__title">Horario de Atención</h3>
+                        <span>Lunes a Domingo de 4:00 p.m a 11:00 p.m</span>
+                    </li>
+                </ul>
+            </article>
+
+        </section>
+
     </main>
 
-
+    <footer class="footer">
+        <small>Sitio diseñado por <a class="footer__link" href="">Yuber Lobo</a>| © 2023 Todos los derechos
+            reservados.</small>
+    </footer>
     <script type="module" src="js/script.js"></script>
 </body>
 
