--- a/index.html
+++ b/index.html
@@ -15,32 +15,47 @@
 
         <div class="container_max-width">
 
-            <div class="logo">
-                <a class="logo__text" href="index.html">Mestieri</a>
+            <div class="header__nav">
+                <div class="logo">
+                    <a class="logo__text" href="index.html">Mestieri</a>
+                </div>
+
+                <nav class="nav">
+                    <ul class="nav__sections">
+                        <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
+                        <li class="nav__items"><a class="nav__link" href="#productos">Productos</a></li>
+                        <li class="nav__items"><a class="nav__link" href="#acerca">Acerca</a></li>
+                        <li class="nav__items"><a class="nav__link" href="#contacto">Contacto</a></li>
+                        <li class="nav__items"><a class="nav__link" href="#">Menu</a>
+                            <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
+                                width="48">
+                                <path
+                                    d="M220-80q-24 0-42-18t-18-42v-520q0-24 18-42t42-18h110v-10q0-63 43.5-106.5T480-880q63 0 106.5 43.5T630-730v10h110q24 0 42 18t18 42v520q0 24-18 42t-42 18H220Zm170-640h180v-10q0-38-26-64t-64-26q-38 0-64 26t-26 64v10Zm210 180q13 0 21.5-8.5T630-570v-90h-60v90q0 13 8.5 21.5T600-540Zm-240 0q13 0 21.5-8.5T390-570v-90h-60v90q0 13 8.5 21.5T360-540Z" />
+                            </svg>
+                        </li>
+                    </ul>
+                </nav>
             </div>
 
-            <nav class="nav">
-                <ul class="nav__sections">
-                    <li class="nav__items"><a class="nav__link" href="#inicio">Inicio</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#productos">Productos</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#acerca">Acerca</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#contacto">Contacto</a></li>
-                    <li class="nav__items"><a class="nav__link" href="#">Menu</a></li>
-                </ul>
-            </nav>
+            <div class="header__options">
+                <div class="shopping-card">
+                    <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
+                        width="48">
+                        <path
+                            d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h491v60H277q-42 0-60.5-28t.5-63l64-118-152-322H51v-60h117l37 79Zm140 288h288-288Z" />
+                    </svg>
+                </div>
 
-            <div class="shopping-card">
-                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48">
-                    <path
-                        d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h491v60H277q-42 0-60.5-28t.5-63l64-118-152-322H51v-60h117l37 79Zm140 288h288-288Z" />
-                </svg>
-            </div>
+                <div class="header__access">
+                    <div class="log-in log-in--hidden">
+                        <a href="#log-in">Iniciar Sesión</a>
+                    </div>
 
-            <div class="log-in log-in--hidden">
-                <span>Iniciar Sesión</span>
-            </div>
-            <div class="sign-up log-up--hidden">
-                <span>Registrarse</span>
+                    <div class="sign-up log-up--hidden">
+                        <a href="#">Registrarse</a>
+                    </div>
+                </div>
+
             </div>
 
             <div class="menu-btn">
@@ -57,6 +72,7 @@
 
         </div>
     </header>
+
     <main class="main">
 
         <section id="inicio" class="home hero-image" data-opacity-color="var(--black-alpha-color)"
@@ -266,6 +282,7 @@
         <small>Sitio diseñado por <a class="footer__link" href="">Yuber Lobo</a>| © 2023 Todos los derechos
             reservados.</small>
     </footer>
+
     <script type="module" src="js/script.js"></script>
 </body>
 
