Se corrige el home vers. all

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#log-in">Iniciar Sesión</a>
                     </div>
 
-                    <div class="sign-up log-up--hidden">
+                    <div class="sign-up link-to_btn log-up--hidden">
                         <a href="#sign-up">Registrarse</a>
                     </div>
                 </div>
@@ -75,16 +75,32 @@
 
     <main class="main">
 
-        <section id="inicio" class="home hero-image" data-opacity-color="var(--black-alpha-color)"
-            data-url="url('assets/images/background-image.jpg')" data-attachment="fixed">
+        <section id="inicio" class="home">
 
-            <div class="home__text">
+            <!-- <div class="home__text_sm">
                 <span class="text_yellow">¿Y TU, ESTAS DISPUESTO</span> <br> <span class="text_white_tr">
                     A PROBARNOS?
                 </span>
-            </div>
+            </div> -->
 
-            <a class="home__btn link-to_btn" href="#">Ordena Ahora</a>
+            <div class="home__text_lg">
+                <h1 class="home__title"><em class="home__logo">Mestieri</em> Fast Food</h1>
+                <p class="home__parragraph">¡Bienvenidos a Mestieri Fast Food, el lugar donde la deliciosa comida rápida
+                    se combina
+                    con la atención impecable!</p>
+                <p class="home__parragraph">
+                    Nuestro restaurante está dedicado a satisfacer tus antojos más rápidos sin comprometer
+                    la calidad de los ingredientes. Cada plato está cuidadosamente preparado para brindarte
+                    una experiencia culinaria excepcional.
+                </p>
+                <p class="home__parragraph">
+                    ¡Ven y descubre por qué somos la opción favorita de los amantes de la comida rápida!
+                </p>
+                <a class="home__btn link-to_btn" href="#">Ordena Ahora</a>
+            </div>
+            <figure class="home__figure">
+                <img class="home__img" src="assets/images/logo-mestieri.jpg" alt="">
+            </figure>
 
         </section>
 
