Se añade menu.html junto con los productos y categorias vers. movil

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <!-- *Header* -->
     <header class="header">
 
         <div class="container_max-width">
@@ -74,8 +74,10 @@
         </div>
     </header>
 
+    <!-- *Main* -->
     <main class="main">
 
+        <!-- *Home* -->
         <section id="inicio" class="home">
 
             <div class="home__text_lg">
