Se corrige el diseño de la interfaz para la vers. desktop

--- a/index.html
+++ b/index.html
@@ -168,35 +168,35 @@
                         <img class="slider__img" src="/assets/images/products/hamburguesa-de-pollo.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Hamburguesa de Pollo</h3>
-                            <a class="slider__btn link_to_btn link_to_btn--light" href="#">Ordena Ahora</a>
+                            <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
                         <img class="slider__img" src="/assets/images/products/hamburguesa-mixta.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Hamburguesa Mixta</h3>
-                            <a class="slider__btn link_to_btn link_to_btn--light" href="#">Ordena Ahora</a>
+                            <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
                         <img class="slider__img" src="/assets/images/products/sandwich-pollo.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Sandwich de Pollo</h3>
-                            <a class="slider__btn link_to_btn link_to_btn--light" href="#">Ordena Ahora</a>
+                            <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
                         <img class="slider__img" src="/assets/images/products/salchipapa-basica-principal.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Salchipapa Básica Principal</h3>
-                            <a class="slider__btn link_to_btn link_to_btn--light" href="#">Ordena Ahora</a>
+                            <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
                         <img class="slider__img" src="/assets/images/products/papas-cheedar.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Papas Cheedar</h3>
-                            <a class="slider__btn link_to_btn link_to_btn--light" href="#">Ordena Ahora</a>
+                            <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                 </div>
@@ -296,7 +296,9 @@
     </main>
 
     <footer class="footer">
-        <small>Sitio diseñado por <a class="footer__link" href="">Yuber Lobo</a>| © 2023 Todos los derechos
+        <!-- <small>Sitio diseñado por <a class="footer__link" href="">Yuber Lobo</a>| © 2023 Todos los derechos
+            reservados.</small> -->
+        <small>© 2023 Todos los derechos
             reservados.</small>
     </footer>
 
