Se añade la carga de categorias desde el db.json

--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
             <section class="categories">
                 <h2 class="section__title">Categorías</h2>
                 <div class="categories__container">
-                    <div id="todo" class="category">
+                    <!-- <div id="todo" class="category">
                         <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                             height="300.000000pt" viewBox="0 0 300.000000 300.000000"
                             preserveAspectRatio="xMidYMid meet">
@@ -585,7 +585,7 @@
                             </g>
                         </svg>
                         <h3 class="category__type">Bebidas</h3>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
@@ -600,6 +600,7 @@
     <!-- *Footer* -->
     <div data-include="/components/footer.html"></div>
 
+    <!-- *Template Cards* -->
     <template id="template-card">
         <div class="card">
 
@@ -648,6 +649,14 @@
             </div>
         </div>
     </template>
+
+    <!-- *Template Categories* -->
+    <template id="template-categories">
+        <div class="category">
+            <h3 class="category__type"></h3>
+        </div>
+    </template>
+
 
     <article class="modal modal-card" id="card-1">
 
