Se añaden las diferentes funcionalidades por componentes

--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <title>Mestieri</title>
 
 
-    <script src="js/include-html.js"></script>
+    <script src="js/components/include-html.js"></script>
 </head>
 
 <body>
