--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/components/shopping-cart.css">
     <title>Carrito de Compras</title>
 
-    <script src="js/include-html.js"></script>
+    <script src="js/components/include-html.js"></script>
 </head>
 
 <body>
