--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Mestieri</title>
-    <script src="js/include-html.js"></script>
+    <script src="js/components/include-html.js"></script>
 </head>
 
 <body>
