Se corrigen funcionalidades del carrito de compras y del menu

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -61,7 +61,7 @@
                                 <h2>Ir a pagar</h2>
                                 <div class="total_purchase">
                                     <h4>SubTotal</h4>
-                                    <h3>$0.0</h3>
+                                    <h3 id="sub-total">$0.0</h3>
                                 </div>
                             </a>
                         </td>
