--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -120,7 +120,8 @@
             </td>
         </tr>
     </template>
-
+    
+    <script src="https://js.stripe.com/v3/"></script>
     <script type="module" src="js/script.js"></script>
 </body>
 
